@@ -1,7 +1,6 @@
 package ispp.project.dondesiempre.modules.orders.services;
 
 import ispp.project.dondesiempre.modules.auth.models.User;
-import ispp.project.dondesiempre.modules.auth.repositories.UserRepository;
 import ispp.project.dondesiempre.modules.auth.services.AuthService;
 import ispp.project.dondesiempre.modules.common.exceptions.ResourceNotFoundException;
 import ispp.project.dondesiempre.modules.common.exceptions.UnauthorizedException;
@@ -12,7 +11,8 @@ import ispp.project.dondesiempre.modules.orders.models.OrderStatus;
 import ispp.project.dondesiempre.modules.orders.repositories.OrderRepository;
 import ispp.project.dondesiempre.modules.outfits.models.Outfit;
 import ispp.project.dondesiempre.modules.outfits.services.OutfitService;
-import ispp.project.dondesiempre.modules.products.models.Product;
+import ispp.project.dondesiempre.modules.products.models.ProductVariant;
+import ispp.project.dondesiempre.modules.products.services.ProductVariantService;
 import ispp.project.dondesiempre.modules.stores.models.Store;
 import ispp.project.dondesiempre.modules.stores.repositories.StoreRepository;
 import ispp.project.dondesiempre.utils.crypto.CryptoConverter;
@@ -32,9 +32,9 @@ import org.springframework.transaction.annotation.Transactional;
 public class OrderService {
 
   private final OrderRepository orderRepository;
-  private final UserRepository userRepository;
   private final StoreRepository storeRepository;
   private final AuthService authService;
+  private final ProductVariantService productVariantService;
   private final CryptoConverter cryptoConverter;
   private final ApplicationContext applicationContext;
   private final OutfitService outfitService;
@@ -75,7 +75,7 @@ public class OrderService {
   public Order findById(UUID id) throws ResourceNotFoundException {
     return orderRepository
         .findById(id)
-        .orElseThrow(() -> new ResourceNotFoundException("Order with ID " + id + "not found."));
+        .orElseThrow(() -> new ResourceNotFoundException("Order with ID " + id + " not found."));
   }
 
   @Transactional
@@ -133,17 +133,26 @@ public class OrderService {
 
   private OrderDTO.OrderItemDTO mapItemToDTO(OrderItem item) {
     return OrderDTO.OrderItemDTO.builder()
+        .id(item.getId())
         .productId(item.getProduct().getId())
         .productName(item.getProduct().getName())
+        .variantId(item.getVariant().getId())
+        .variantSize(item.getVariant().getSize().getSize())
+        .variantColor(item.getVariant().getColor().getColor())
         .quantity(item.getQuantity())
         .priceAtPurchase(item.getPriceAtPurchase())
         .subtotal(item.getQuantity() * item.getPriceAtPurchase())
         .build();
   }
 
-  @Transactional(rollbackFor = ResourceNotFoundException.class)
-  public OrderDTO createOrder(Map<Product, Integer> productsToBuy, UUID outfitId)
-      throws ResourceNotFoundException {
+  @Transactional(rollbackFor = {ResourceNotFoundException.class, UnauthorizedException.class})
+  public OrderDTO createOrder(Map<UUID, Integer> variantIdsWithQuantity, UUID outfitId)
+      throws ResourceNotFoundException, UnauthorizedException, IllegalArgumentException {
+
+    if (variantIdsWithQuantity == null || variantIdsWithQuantity.isEmpty()) {
+      throw new IllegalArgumentException("Quantity of products must be greater than 0.");
+    }
+
     User user = authService.getCurrentUser();
 
     Order order = new Order();
@@ -152,12 +161,34 @@ public class OrderService {
     order.setOrderStatus(OrderStatus.PENDING);
     order.setOrderCode(this.generateRandomCode());
 
-    for (Map.Entry<Product, Integer> entry : productsToBuy.entrySet()) {
+    UUID storeId = null;
+
+    for (Map.Entry<UUID, Integer> entry : variantIdsWithQuantity.entrySet()) {
+      if (entry.getValue() == null || entry.getValue() <= 0) {
+        throw new IllegalArgumentException("Quantity of products must be greater than 0.");
+      }
+
+      ProductVariant variant = productVariantService.getProductVariantById(entry.getKey());
+
+      if (!variant.getIsAvailable()) {
+        throw new UnauthorizedException(
+            String.format(
+                "ProductVariant with ID %s is not available for purchase", variant.getId()));
+      }
+
+      UUID currentStoreId = variant.getProduct().getStore().getId();
+      if (storeId == null) {
+        storeId = currentStoreId;
+      } else if (!storeId.equals(currentStoreId)) {
+        throw new IllegalArgumentException("All products shoulde belong to the same store.");
+      }
+
       OrderItem item = new OrderItem();
       item.setOrder(order);
-      item.setProduct(entry.getKey());
+      item.setProduct(variant.getProduct());
+      item.setVariant(variant);
       item.setQuantity(entry.getValue());
-      item.setPriceAtPurchase(entry.getKey().getPriceInCents());
+      item.setPriceAtPurchase(variant.getProduct().getPriceInCents());
 
       order.getItems().add(item);
     }
@@ -184,7 +215,7 @@ public class OrderService {
         orderRepository
             .findById(orderId)
             .orElseThrow(
-                () -> new ResourceNotFoundException("Order with ID" + orderId + "not found"));
+                () -> new ResourceNotFoundException("Order with ID " + orderId + " not found"));
     if (order.getOrderStatus().equals(OrderStatus.PENDING)) {
       order.setOrderStatus(OrderStatus.CONFIRMED);
     } else {
@@ -199,8 +230,8 @@ public class OrderService {
         orderRepository
             .findById(orderId)
             .orElseThrow(
-                () -> new ResourceNotFoundException("Order with ID" + orderId + "not found"));
-    authService.assertUserOwnsStore(order.getItems().getFirst().getProduct().getStore());
+                () -> new ResourceNotFoundException("Order with ID " + orderId + " not found"));
+    authService.assertUserOwnsStore(order.getItems().get(0).getProduct().getStore());
     if (order.getOrderStatus().equals(OrderStatus.PENDING)) {
       order.setOrderStatus(OrderStatus.REJECTED);
     } else {
@@ -217,8 +248,8 @@ public class OrderService {
         orderRepository
             .findByOrderCode(encryptedCode)
             .orElseThrow(
-                () -> new ResourceNotFoundException("Order with Code" + orderCode + "not found"));
-    authService.assertUserOwnsStore(order.getItems().getFirst().getProduct().getStore());
+                () -> new ResourceNotFoundException("Order with Code " + orderCode + " not found"));
+    authService.assertUserOwnsStore(order.getItems().get(0).getProduct().getStore());
     return mapToOrderDTO(order);
   }
 
@@ -228,8 +259,8 @@ public class OrderService {
         orderRepository
             .findById(orderId)
             .orElseThrow(
-                () -> new ResourceNotFoundException("Order with ID" + orderId + "not found"));
-    authService.assertUserOwnsStore(order.getItems().getFirst().getProduct().getStore());
+                () -> new ResourceNotFoundException("Order with ID " + orderId + " not found"));
+    authService.assertUserOwnsStore(order.getItems().get(0).getProduct().getStore());
     if (order.getOrderStatus().equals(OrderStatus.CONFIRMED)) {
       order.setOrderStatus(OrderStatus.PICKED);
     } else {
@@ -244,8 +275,8 @@ public class OrderService {
         orderRepository
             .findById(orderId)
             .orElseThrow(
-                () -> new ResourceNotFoundException("Order with ID" + orderId + "not found"));
-    authService.assertUserOwnsStore(order.getItems().getFirst().getProduct().getStore());
+                () -> new ResourceNotFoundException("Order with ID " + orderId + " not found"));
+    authService.assertUserOwnsStore(order.getItems().get(0).getProduct().getStore());
     if (order.getOrderStatus().equals(OrderStatus.PENDING)) {
       order.setOrderStatus(OrderStatus.CANCELLED);
     } else {
